spade-tests/src/snapshots/spade_tests__parser__integer_ranges_disallow_generic_fits.snap
---
source: spade-tests/src/parser.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Unexpected `fits`, expected `Identifier`
  ┌─ testinput:1:8
  │
1 │ fn foo<fits>(a<fits>) -> bool {
  │        ^^^^ expected `Identifier`


