spade-tests/src/snapshots/spade_tests__parser__item_contexts_are_cleared_on_error_recovery.snap
---
source: spade-tests/src/parser.rs
---
entity test() {}

entity int32_to_float32(input: int<32>) -> uint<32> {
    test()
    test()
}

entity top(input: int<32>) -> uint<32> {}



error: Expected a `;` after this expression.
  ┌─ testinput:4:5
  │
4 │     test()
  │     ^^^^^^
5 │     test()
  │     ------ Required because it is followed by this
  │
  = help: Only the last expression to be returned can be without a semicolon

error: Output type mismatch. Expected uint<32>, got ()
  ┌─ testinput:3:53
  │  
3 │   entity int32_to_float32(input: int<32>) -> uint<32> {
  │                                              -------- uint<32> type specified here
  │ ╭─────────────────────────────────────────────────────^
4 │ │     test()
5 │ │     test()
  │ │     ------ Type () inferred here
6 │ │ }
  │ ╰─^ Found type ()
  │  
  = note: Expected: uint<32>
               Got: ()

error: Output type mismatch. Expected uint<32>, got ()
  ┌─ testinput:8:40
  │
8 │ entity top(input: int<32>) -> uint<32> {}
  │                               -------- ^^ Found type ()
  │                               │         
  │                               uint<32> type specified here
  │
  = note: Expected: uint<32>
               Got: ()
