spade-tests/src/snapshots/spade_tests__parser__macro_definition_must_use_parens.snap
---
source: spade-tests/src/parser.rs
---
macro test[] {}


error: Unexpected `[`, expected `(` or `{`
  ┌─ testinput:1:11
  │
1 │ macro test[] {}
  │           ^ expected `(` or `{`
