spade-tests/src/snapshots/spade_tests__parser__macro_definition_unexpected_token.snap
---
source: spade-tests/src/parser.rs
---
macro test x


error: Unexpected `identifier`, expected `(` or `{`
  ┌─ testinput:1:12
  │
1 │ macro test x
  │            ^ expected `(` or `{`
