spade-tests/src/snapshots/spade_tests__parser__macro_pattern_fragment_unexpected_token.snap
---
source: spade-tests/src/parser.rs
---
macro test($.) {}


error: Unexpected `.`, expected `Identifier` or `(`
  ┌─ testinput:1:13
  │
1 │ macro test($.) {}
  │             ^ expected `Identifier` or `(`
